Cleaned up some layout issues

--- a/app/css/screen.css
+++ b/app/css/screen.css
@@ -134,7 +134,6 @@ header li a:hover {
     background: #fafafa;
     border-bottom: 2px solid #527FA2;
     padding: 15px 20px;
-    box-shadow: inset 0 3px 5px rgba(0,0,0,.2);
 }
 
 .bin-overview > div {
